--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,6 +13,9 @@ find_library( wthttp wthttp )
 
 add_executable( slurm_gui
   main.cpp
+  AuthWidget.cpp
+  model/Session.cpp 
+  model/User.cpp
 )
 
 target_link_libraries( slurm_gui wt wthttp wtdbosqlite3 wtdbo ${Boost_SYSTEM_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_SIGNALS_LIBRARY} )
