refined partition data aquisition and streamlined the client codey

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,6 +18,8 @@ add_executable( slurm_gui
   InfoWidget.cpp
   RootApplication.cpp
   AdminWidget.cpp
+  PartitionsInfo.cpp
+  PartitionInfo.cpp
   model/Session.cpp 
   model/User.cpp
 )
