added node data aquisition stuff and moved ownership if partitions data to root

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,6 +20,8 @@ add_executable( slurm_gui
   AdminWidget.cpp
   PartitionsInfo.cpp
   PartitionInfo.cpp
+  NodesInfo.cpp
+  NodeInfo.cpp
   model/Session.cpp 
   model/User.cpp
 )
