--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,7 +7,7 @@ SET (CMAKE_BUILD_TYPE DEBUG)
 SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -pthread -g -fno-omit-frame-pointer" )
 SET( CMAKE_EXPORT_COMPILE_COMMANDS on )
 
-option( debug_login "deactivate login for debugging" on )
+option( debug_login "deactivate login for debugging" off )
 option( enable_registration "enable registration of accounts" off )
 
 if ( debug_login ) 
